[gd_scene load_steps=4 format=3 uid="uid://gxvvais6hvep"]

[ext_resource type="Script" uid="uid://ca31x2qbaf4t2" path="res://hud/trade_container.gd" id="1_yx4dn"]
[ext_resource type="Texture2D" uid="uid://bcahmm18uhpb1" path="res://hud/0iYJzQ.png" id="2_um2va"]

[sub_resource type="LabelSettings" id="LabelSettings_um2va"]
font_color = Color(0.99215, 0.831363, 0.334378, 1)

[node name="Trade_container" type="Node2D"]
script = ExtResource("1_yx4dn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_um2va")
region_enabled = true
region_rect = Rect2(160, 99, 24, 24)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -7.0
offset_top = -7.0
offset_right = 7.0
offset_bottom = 7.0
expand_mode = 1

[node name="PriceLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = 12.0
offset_right = 20.0
offset_bottom = 35.0
text = "???$"
label_settings = SubResource("LabelSettings_um2va")
horizontal_alignment = 1

[connection signal="mouse_entered" from="TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_texture_rect_mouse_exited"]
